//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  name String [not null]
  email String [unique, not null]
  password String [not null]
  cpf String [unique]
  cnpj String [unique]
  crm String [unique]
  nationalId String [unique]
  userRole UserRole [not null, default: 'PARTICIPANT']
  refreshToken String
  eventRegistrations EventRegistration [not null]
  activityRegistrations ActivityRegistration [not null]
  eventsOrganized Event [not null]
}

Table Event {
  id Int [pk, increment]
  name String [not null]
  organizerId Int [not null]
  description String [not null]
  format Format [not null]
  location String
  userDocument Boolean [not null]
  banner String
  eventType EventType [not null]
  startDate DateTime [not null]
  endDate DateTime [not null]
  maxCapacity Int
  complementaryHours Int
  status RegistrationStatus [not null]
  category Category
  activities Activity [not null]
  eventRegistrations EventRegistration [not null]
  fields EventField [not null]
  eventTags EventTag [not null]
  userOrganizer User [not null]
}

Table Activity {
  id Int [pk, increment]
  name String [not null]
  description String [not null]
  format Format [not null]
  location String
  userDocument Boolean [not null]
  banner String
  startDate DateTime [not null]
  startTime String [not null]
  activityType ActivityType [not null]
  maxCapacity Int [not null]
  complementaryHours Int [not null]
  eventId Int [not null]
  event Event [not null]
  activityRegistrations ActivityRegistration [not null]
  fields ActivityField [not null]
}

Table EventRegistration {
  id Int [pk, increment]
  eventId Int [not null]
  userId Int [not null]
  status RegistrationStatus [not null]
  timestamp DateTime [default: `now()`, not null]
  event Event [not null]
  user User [not null]
  responses EventFieldResponse [not null]
}

Table ActivityRegistration {
  id Int [pk, increment]
  activityId Int [not null]
  userId Int [not null]
  status RegistrationStatus [not null]
  timestamp DateTime [default: `now()`, not null]
  activity Activity [not null]
  user User [not null]
  responses ActivityFieldResponse [not null]
}

Table EventField {
  id Int [pk, increment]
  eventId Int [not null]
  name String [not null]
  type FieldType [not null]
  required Boolean [not null, default: false]
  event Event [not null]
  responses EventFieldResponse [not null]
}

Table EventFieldResponse {
  id Int [pk, increment]
  eventRegistrationId Int [not null]
  eventFieldId Int [not null]
  value String [not null]
  eventRegistration EventRegistration [not null]
  eventField EventField [not null]
}

Table ActivityField {
  id Int [pk, increment]
  activityId Int [not null]
  name String [not null]
  type FieldType [not null]
  required Boolean [not null, default: false]
  activity Activity [not null]
  responses ActivityFieldResponse [not null]
}

Table ActivityFieldResponse {
  id Int [pk, increment]
  activityRegistrationId Int [not null]
  activityFieldId Int [not null]
  value String [not null]
  activityRegistration ActivityRegistration [not null]
  activityField ActivityField [not null]
}

Table Tag {
  id Int [pk, increment]
  name String [unique, not null]
  eventTags EventTag [not null]
}

Table EventTag {
  eventId Int [not null]
  tagId Int [not null]
  event Event [not null]
  tag Tag [not null]

  indexes {
    (eventId, tagId) [pk]
  }
}

Enum Format {
  PRESENTIAL
  ONLINE
  HYBRID
}

Enum EventType {
  SIMPLE
  LARGE
}

Enum ActivityType {
  LECTURE
  SHORT_COURSE
  WORKSHOP
  SEMINAR
}

Enum RegistrationStatus {
  PENDING
  CONFIRMED
  CANCELED
}

Enum FieldType {
  STRING
  NUMBER
  DATE
  BOOLEAN
}

Enum RegistrationState {
  ACTIVE
  CLOSED
  CANCELED
  DRAFT
}

Enum UserRole {
  ADMIN
  ORGANIZER
  PARTICIPANT
}

Enum Category {
  TALK
  LECTURE
  WORKSHOP
  SEMINAR
  SHORT_COURSE
  OTHER
}

Ref: Event.organizerId > User.id

Ref: Activity.eventId > Event.id

Ref: EventRegistration.eventId > Event.id

Ref: EventRegistration.userId > User.id

Ref: ActivityRegistration.activityId > Activity.id

Ref: ActivityRegistration.userId > User.id

Ref: EventField.eventId > Event.id

Ref: EventFieldResponse.eventRegistrationId > EventRegistration.id

Ref: EventFieldResponse.eventFieldId > EventField.id

Ref: ActivityField.activityId > Activity.id

Ref: ActivityFieldResponse.activityRegistrationId > ActivityRegistration.id

Ref: ActivityFieldResponse.activityFieldId > ActivityField.id

Ref: EventTag.eventId > Event.id

Ref: EventTag.tagId > Tag.id